2007-10-12  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/app.c (app_new): create the status icon.
	(app_quit): destroy the status icon.

	* src/Makefile.am: Added status-icon.c and status-icon.h to the
	build process.

	* src/ctree.c (start_timer_for_row, stop_timer_for_row): Update
	the timer status indication in the status icon.

	* src/status-icon.c, src/status-icon.h: Initial implementation of
	a status icon.

2007-10-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/interval_edit.glade: show seconds in the interval edit
	dialog (Fixes: #1706365)

	* src/ghtml-deprecated.c: Ported to guile-1.8.

	* src/ghtml.c: Ported to guile-1.8.

	* ghtml/C/basic-invoice.ghtml: Fixed some unquoted strings.

	* ghtml/C/primer.ghtml: Fixed some unquoted strings.

2007-09-26  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/toolbar.c: rebuild the toolbar each time config_show_toolbar
	is changed so that the toolbar is really hidden when the don't
	want it to be shown.

	* gnotime.desktop: Updated desktop entry

	* configure.in: Removed debian/Makefile from the list of output
	files.

2007-09-24  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Removed Makefiles for the manual translations from
	the list of output files.

2007-09-23  Goedson Teixeira Paixao  <goedson@debian.org>

	* Released 2.2.3
	
	* NEWS: Added release notes for version 2.2.3

	* doc/C/gnotime.xml: Removed notes about the manual being outdated
	since it is now, hopefully, updated.

	* doc/Makefile.am: disabled installation of manual translations
	since they are outdated

	* doc/C/gnotime.xml: Added section about reports.

2007-09-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: 
	- Fixed some typos.
	- Updated section about timeout dialogs
	- Updated Free Software Foundation address
	- Added section about gnotime-remote

2007-09-20  Goedson Teixeira Paixao  <goedson@debian.org>

	* pt_BR.po: Fixed typo.
