@@ -1,3 +1,7 @@
+2007-10-13  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/status-icon.c: Clicking on status icon will toggle the timer.
+
 2007-10-12  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* src/app.c (app_new): create the status icon.
